[project]
name = "aoclib"
version = "0.1.0"
description = "Helper library for Advent of Code"
readme = "README.md"
authors = [
    { name = "Sumudu Fernando", email = "sumuduf@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
